<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/snow"
    android:orientation="vertical">

    <TextView
        android:id="@+id/memory_screen"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/main_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0.0" />

    <TextView
        android:id="@+id/main_screen"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0.0" />


    <Button
        android:id="@+id/button_7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_7"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_screen" />

    <Button
        android:id="@+id/button_8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_8"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/main_screen" />

    <Button
        android:id="@+id/button_9"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_9"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@id/button_multi"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/main_screen" />
    <Button
        android:id="@+id/button_multi"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_multi"
        android:textColor="#FF5722"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/main_screen" />
    <Button
        android:id="@+id/button_4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_4"
        android:textColor="#FF5722"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_5"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/button_6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_6"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@id/button_share"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_share"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_share"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_multi" />

    <Button
        android:id="@+id/button_1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_1"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_2"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_3"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/button_plus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_plus"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_share" />

    <Button
        android:id="@+id/button_0"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_0"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@id/button_equals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_equals"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_equals"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@+id/button_erase"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />


    <Button
        android:id="@+id/button_erase"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clear"
        android:text="@string/_erase"
        android:textSize="@dimen/button_text"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_equals"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />
    <Button
        android:id="@+id/button_minus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/_minus"
        android:textColor="#FF5722"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_erase"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>